fix gallery gap

--- a/assets/less/components/gallery.less
+++ b/assets/less/components/gallery.less
@@ -1,5 +1,6 @@
 :root {
   --chevron-posititon: 20px;
+  --masonry-gap: 20px;
 
   @media (max-width: 480px) {
     --chevron-posititon: 10px;
@@ -12,7 +13,7 @@
 
 .masonry-gallery {
   column-count: 3;
-  column-gap: 20px;
+  column-gap: var(--masonry-gap);
 
   @media (max-width: 991px) {
     column-count: 2;
@@ -24,12 +25,11 @@
 
   .item {
     break-inside: avoid;
-    margin-bottom: 1em;
+    margin-bottom: var(--masonry-gap);
     cursor: pointer;
 
     img {
       width: 100%;
-      display: block;
       border-radius: 8px;
     }
   }
